# kingsguard

./: .gitattributes  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
core/: agents.py  crew.py  middleware.py  tasks.py  tools.py
data/datasets/injecagent_data/: MPDD_test.csv
data/storage/: bench_all_results.json  final_causal_model.db
scripts/: calibrate_l2.py  debug_layers.py  merge_l1.py  test_all_layers.py  test_l4.py  test_pipeline.py  test_prompts.py  train_l1.py
static/: app.js  style.css
templates/: index.html
